# Trashbin

./: .gitignore  ALU.v  BarrelShifterLogical.qip  BarrelShifterLogical.v  BarrelShifterLogical_bb.v  BasicGPIO.v  CorePLL.bsf  CorePLL.ppf  CorePLL.qip  CorePLL.sip  CorePLL.spd  CorePLL.v  CorePLL_sim.f  CpuDataInterface.sv  DecodedInstruction.sv  DecodedInstruction.v  FirstMemoryController.sv  IOInterface.sv  InstructionDecoder.v  MMPeripheralInterface.sv  MainConstraintsFile.sdc  RamRegisterFile.qip  RamRegisterFile.v  RamRegisterFile_Double.qip  RamRegisterFile_Double.v  RamRegisterFile_Double_bb.v  RamRegisterFile_bb.v  RegisterFile.qip  RegisterFile.v  RegisterFile_bb.v  TempRam.qip  TempRam.v  TempRam_bb.v  TrashbinCore.v  TrashbinSOC.sv  TrashbinSOC.v  UART.sv  UartFIFO.qip  UartFIFO.v  UartFIFO_bb.v  (+12 more)
.qsys_edit/: post_transform_layout.xml  preferences.xml
Code/: CMakeLists.txt  GPIO_DRIVER.h  MemoryMapPlan.h  compile.py  crt0.S  linker.ld  main.cpp  riscv_toolchain.cmake  test.s
Code/c/: a.out  test.c
Components/: SevenSegment.v
CorePLL/: CorePLL_0002.qip  CorePLL_0002.v
CorePLL_sim/: CorePLL.vo
CorePLL_sim/cadence/: ncsim_setup.sh
CorePLL_sim/synopsys/vcs/: vcs_setup.sh
CorePLL_sim/xcelium/: xcelium_setup.sh
OldCode/: compile2.py  test.s  to_hex.bat
OldCode/c/: binToHex.py  linker.txt
greybox_tmp/: cbx_args.txt
greybox_tmp/greybox_tmp/: mg36v.v  mg7hk.v  mg90f.v  mgk1f.v  mgkik.v  mgqfk.v  mgs1f.v
output_files/: trashbin.cdf
output_files/.qsys_edit/: preferences.xml
output_files/greybox_tmp/: cbx_args.txt
unsaved/: unsaved.bsf  unsaved_bb.v  unsaved_inst.v
(+1 files in other folders)
